[build-dependencies]
  [build-dependencies.tauri-build]
    features = []
    version = "1.0.3"

[dependencies]
  serde_json = "1.0"
  [dependencies.serde]
    features = ["derive"]
    version = "1.0"
  [dependencies.tauri]
    features = ["api-all"]
    version = "1.0.3"

[features]
  custom-protocol = ["tauri/custom-protocol"]
  default = ["custom-protocol"]

[package]
  authors = ["Andre Cox"]
  default-run = "app"
  description = "A program to calculate the values of electrical components"
  edition = "2021"
  license = ""
  name = "e-toolbox"
  repository = ""
  rust-version = "1.57"
  version = "0.1.0"
